[package]
name = "simple-matrix-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "6.0.1"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
